<?xml version="1.0"?>
<package format="3">
  <name>sac_driver</name>
  <version>0.1.0</version>
  <description>SAC policy driver for F1TENTH integration.</description>
  <maintainer email="noreply@example.com">LLM_migracja</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>vesc_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>torch</exec_depend>
  <exec_depend>numpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
